fix: loader jumping

--- a/packages/ui/src/loader/loader.css
+++ b/packages/ui/src/loader/loader.css
@@ -17,6 +17,7 @@
 
 .dots {
   margin-top: 2rem;
+  min-height: 32px;
 }
 
 /* source: https://css-tricks.com/single-element-loaders-the-dots */
